force-app/main/default/objects/Book__c/fields/Amount_data__c.field-meta.xml
<CustomField>
    <fullName>Amount_data__c</fullName>
    <label>Amount data</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>