force-app/main/default/objects/Book__c/fields/Book_Type__c.field-meta.xml
<CustomField>
    <fullName>Book_Type__c</fullName>
    <label>Book Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Drama</fullName>
                <default>true</default>
                <label>Drama</label>
            </value>
            <value>
                <fullName>Mediation</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>