force-app/main/default/objects/Book__c/fields/Name_of_Book__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Book__c</fullName>
    <label>Name of Book</label>
    <length>255</length>
    <type>Text</type>
</CustomField>